tests/assembler/fail/test11.ial
type S
{
}

type R
{
    field S&& s;
}
